--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     My Projects
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Cornell GPA Calculator</a>
+                    <a class="dropdown-item" href="/CornellGPA/">Cornell GPA Calculator</a>
                     <a class="dropdown-item" href="#">Link 2</a>
                     <a class="dropdown-item" href="#">Link 3</a>
                 </div>
