--- a/index.html
+++ b/index.html
@@ -11,37 +11,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="styles.css">
+    <script src="static.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <!-- Brand/logo -->
-        <a class="navbar-brand" href="./">
-            <img src="fav.png" alt="logo" style="width:40px;">
-        </a>
+    <?php $IPATH = $_SERVER["DOCUMENT_ROOT"]; include($IPATH."nav.html"); ?>
+<!--    <nav class="navbar navbar-expand-sm bg-dark navbar-dark nav">-->
+<!--        &lt;!&ndash; Brand/logo &ndash;&gt;-->
+<!--        <a class="navbar-brand" href="./">-->
+<!--            <img src="fav.png" alt="logo" style="width:40px;">-->
+<!--        </a>-->
 
-        <!-- Links -->
-        <ul class="navbar-nav">
-            <!-- Dropdown -->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                    My Projects
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/CornellGPA/">Cornell GPA Calculator</a>
-                    <a class="dropdown-item" href="#">Link 2</a>
-                    <a class="dropdown-item" href="#">Link 3</a>
-                </div>
-            </li>
+<!--        &lt;!&ndash; Links &ndash;&gt;-->
+<!--        <ul class="navbar-nav">-->
+<!--            &lt;!&ndash; Dropdown &ndash;&gt;-->
+<!--            <li class="nav-item dropdown">-->
+<!--                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">-->
+<!--                    My Projects-->
+<!--                </a>-->
+<!--                <div class="dropdown-menu">-->
+<!--                    <a class="dropdown-item" href="/CornellGPA/">Cornell GPA Calculator</a>-->
+<!--                    <a class="dropdown-item" href="#">Link 2</a>-->
+<!--                    <a class="dropdown-item" href="#">Link 3</a>-->
+<!--                </div>-->
+<!--            </li>-->
 
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link" href="#">Link 1</a>-->
+<!--            </li>-->
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link" href="#">Link 2</a>-->
+<!--            </li>-->
 
-        </ul>
-    </nav>
+<!--        </ul>-->
+<!--    </nav>-->
 </body>
 </html>
 
