--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <script src="static.js"></script>
 </head>
 <body>
-    <?php $IPATH = $_SERVER["DOCUMENT_ROOT"]; include($IPATH."nav.html"); ?>
+    <div class="nav-bar">
+
+    </div>
 <!--    <nav class="navbar navbar-expand-sm bg-dark navbar-dark nav">-->
 <!--        &lt;!&ndash; Brand/logo &ndash;&gt;-->
 <!--        <a class="navbar-brand" href="./">-->
