--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="styles.css">
+    <script src="/NAV/static.js"></script>
     <script src="static.js"></script>
 </head>
 <body>
