--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <script src="static.js"></script>
 </head>
 <body>
-    <div class="nav-bar">
-
-    </div>
+    <div class="nav-bar"></div>
 <!--    <nav class="navbar navbar-expand-sm bg-dark navbar-dark nav">-->
 <!--        &lt;!&ndash; Brand/logo &ndash;&gt;-->
 <!--        <a class="navbar-brand" href="./">-->
