--- a/NAV/nav.html
+++ b/NAV/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="./">
-        <img src="fav.png" alt="logo" style="width:40px;">
+        <img src="/fav.png" alt="logo" style="width:40px;">
     </a>
 
     <!-- Links -->
