--- a/NAV/nav.html
+++ b/NAV/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="./">
+    <a class="navbar-brand" href="/">
         <img src="/fav.png" alt="logo" style="width:40px;">
     </a>
 
