--- a/index.html
+++ b/index.html
@@ -16,35 +16,21 @@
 </head>
 <body>
     <div class="nav-bar"></div>
-<!--    <nav class="navbar navbar-expand-sm bg-dark navbar-dark nav">-->
-<!--        &lt;!&ndash; Brand/logo &ndash;&gt;-->
-<!--        <a class="navbar-brand" href="./">-->
-<!--            <img src="fav.png" alt="logo" style="width:40px;">-->
-<!--        </a>-->
-
-<!--        &lt;!&ndash; Links &ndash;&gt;-->
-<!--        <ul class="navbar-nav">-->
-<!--            &lt;!&ndash; Dropdown &ndash;&gt;-->
-<!--            <li class="nav-item dropdown">-->
-<!--                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">-->
-<!--                    My Projects-->
-<!--                </a>-->
-<!--                <div class="dropdown-menu">-->
-<!--                    <a class="dropdown-item" href="/CornellGPA/">Cornell GPA Calculator</a>-->
-<!--                    <a class="dropdown-item" href="#">Link 2</a>-->
-<!--                    <a class="dropdown-item" href="#">Link 3</a>-->
-<!--                </div>-->
-<!--            </li>-->
-
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="#">Link 1</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="#">Link 2</a>-->
-<!--            </li>-->
-
-<!--        </ul>-->
-<!--    </nav>-->
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
+    <h1>HOME</h1>
 </body>
 </html>
 
