--- a/NAV/nav.html
+++ b/NAV/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark nav">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="/">
         <img src="/fav.png" alt="logo" style="width:40px;">
