--- a/NAV/nav.html
+++ b/NAV/nav.html
@@ -7,7 +7,7 @@
     <!-- Links -->
     <ul class="navbar-nav">
         <!-- Dropdown -->
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown item">
             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                 My Projects
             </a>
@@ -18,10 +18,10 @@
             </div>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item item">
             <a class="nav-link" href="#">Link 1</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item item">
             <a class="nav-link" href="#">Link 2</a>
         </li>
 
