--- a/NAV/nav.html
+++ b/NAV/nav.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css">
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark nav">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="/">
