--- a/NAV/nav.html
+++ b/NAV/nav.html
@@ -2,6 +2,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark nav">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="/">
+        R. ZHAO
         <img src="/fav.png" alt="logo" style="width:40px;">
     </a>
 
