--- a/NAV/nav.html
+++ b/NAV/nav.html
@@ -14,7 +14,7 @@
                 My Projects
             </a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="/CornellGPA/">Cornell GPA Calculator</a>
+                <a class="dropdown-item ditem" href="/CornellGPA/">Cornell GPA Calculator</a>
                 <a class="dropdown-item" href="#">Link 2</a>
                 <a class="dropdown-item" href="#">Link 3</a>
             </div>
