--- a/NAV/nav.html
+++ b/NAV/nav.html
@@ -15,8 +15,8 @@
             </a>
             <div class="dropdown-menu">
                 <a class="dropdown-item ditem" href="/CornellGPA/">Cornell GPA Calculator</a>
-                <a class="dropdown-item" href="#">Link 2</a>
-                <a class="dropdown-item" href="#">Link 3</a>
+                <a class="dropdown-item ditem" href="#">Link 2</a>
+                <a class="dropdown-item ditem" href="#">Link 3</a>
             </div>
         </li>
 
