--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="nav-bar"></div>
-    <h1>HOME</h1>
+    <h1 id="head">HOME</h1>
     <h1>HOME</h1>
     <h1>HOME</h1>
     <h1>HOME</h1>
