--- a/CornellGPA/index.html
+++ b/CornellGPA/index.html
@@ -7,15 +7,84 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="styles.css">
-    <script src="../NAV/static.js"></script>
-    <script src="static.js"></script>
+<!--    <script src="../NAV/static.js"></script>-->
+
 </head>
-<body>
-    <div class="nav-bar"></div>
-    4.0 Yay!!!
+<body style="background-color: red;">
+<!--    <div class="nav-bar"></div>-->
+    <form class="m-5" id="theForm">
+        <label for='weight' style='color:white'>Weighted (For unweighted, Honors/AP won't matter)</label>
+        <input id='weight' type='checkbox' class='switch' data-toggle="toggle" data-size="sm" data-onstyle="warning" checked>
+        <fieldset name='default' class='form-group' id='default'>
+            <label for='classname' style='color:white'>Class Name: </label>
+            <input id='classname' placeholder='type class name here'>
+            <br>
+            <label style='color:white' for='G'>Letter Grade: </label>
+            <select name='G' id='G'>
+                <option value='a'>A/A+</option>
+                <option value='am'>A-</option>
+                <option value='bp'>B+</option>
+                <option value='b'>B</option>
+                <option value='bm'>B-</option>
+                <option value='cp'>C+</option>
+                <option value='c'>C</option>
+                <option value='cm'>C-</option>
+                <option value='d'>D</option>
+                <option value='f'>F</option>
+            </select>
+            <br>
+            <label for='HA' style='color:white'>Honors/AP: </label>
+            <input id='HA' type='checkbox'>
+            <br>
+            <label for='C' style='color:white'>Credits: </label>
+            <select name="C" id="C">
+                <option value="6">6</option>
+                <option value="5" selected>5</option>
+                <option value="2.5">2.5</option>
+            </select>
+            <br>
+        </fieldset>
+        <fieldset name="0" class="form-group" id="0">
+            <label for="classname" style='color:white'>Class Name: </label>
+            <input id="classname" placeholder="type class name here">
+            <br>
+            <label style='color:white' for="G">Letter Grade: </label>
+            <select name="G" id="G">
+                <option value="a">A/A+</option>
+                <option value="am">A-</option>
+                <option value="bp">B+</option>
+                <option value="b">B</option>
+                <option value="bm">B-</option>
+                <option value="cp">C+</option>
+                <option value="c">C</option>
+                <option value="cm">C-</option>
+                <option value="d">D</option>
+                <option value="f">F</option>
+            </select>
+            <br>
+            <label for='HA' style='color:white'>Honors/AP: </label>
+            <input id='HA' type='checkbox'>
+            <br>
+            <label for="C" style='color:white'>Credits: </label>
+            <select name="C" id="C">
+                <option value="6">6</option>
+                <option value="5" selected>5</option>
+                <option value="2.5">2.5</option>
+            </select>
+            <br>
+        </fieldset>
+
+    </form>
+    <div class="m-5">
+        <button class="btn btn-secondary" align="center" type="button" id="AddClass">Add Another Class</button>
+        <button class="btn btn-primary" align="center" type="button" id="displaya">Calculate GPA</button>
+    </div>
+    <script src="static.js"></script>
 </body>
 </html>
