--- a/CornellGPA/index.html
+++ b/CornellGPA/index.html
@@ -13,11 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="styles.css">
-<!--    <script src="../NAV/static.js"></script>-->
+    <script src="../NAV/static.js"></script>
 
 </head>
 <body style="background-color: red;">
-<!--    <div class="nav-bar"></div>-->
+    <div class="nav-bar"></div>
     <form class="m-5" id="theForm">
         <label for='weight' style='color:white'>Weighted (For unweighted, Honors/AP won't matter)</label>
         <input id='weight' type='checkbox' class='switch' data-toggle="toggle" data-size="sm" data-onstyle="warning" checked>
@@ -85,6 +85,6 @@
         <button class="btn btn-secondary" align="center" type="button" id="AddClass">Add Another Class</button>
         <button class="btn btn-primary" align="center" type="button" id="displaya">Calculate GPA</button>
     </div>
-    <script src="static.js"></script>
+    <script src="/CornellGPA/static.js"></script>
 </body>
 </html>
