--- a/CornellGPA/index.html
+++ b/CornellGPA/index.html
@@ -12,8 +12,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="styles.css">
-    <script src="../NAV/static.js"></script>
+    <link rel="stylesheet" href="/CornellGPA/styles.css">
+    <script src="/NAV/static.js"></script>
 
 </head>
 <body style="background-color: red;">
