--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
 				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="https://www.linkedin.com/in/robert-zhao-037247190/" target="_blank" rel="noopener noreferrer"
 						class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.instagram.com/rzhao0506/" class="icon brands alt fa-instagram"><span
+							class="label">Instagram</span></a></li>
 				<li><a href="https://github.com/robertzhao2002?tab=repositories" target="_blank" rel="noopener noreferrer"
 						class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 				<li><a href="mailto:rzhao1234@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a>
