Add info about myself

--- a/elements.html
+++ b/elements.html
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html"><img src="images/fav.png"></img></a></h1>
+			<h1 id="logo"><a href="index.html">R. Zhao</a></h1>
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -43,8 +43,7 @@
 							</li>
 						</ul>
 					</li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#" class="button primary">Sign Up</a></li>
+					<li><a href="elements.html">About</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -53,36 +52,32 @@
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>Elements</h2>
-					<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+					<h2>About Robert Zhao</h2>
+					<p>Computer Science Major at Cornell University</p>
 				</header>
 
 				<!-- Text -->
 				<section>
-					<h3>Text</h3>
-					<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is
-						<em>emphasized</em>.
-						This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-						This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a
-							link</a>.
+					<h3>Who am I?</h3>
+					<p>Hi! My name is <b>Robert Zhao</b>, and I currently study <strong>Computer Science</strong> with a side
+						concentration in
+						Applied Engineering Physics at <strong>Cornell University's College of Engineering</strong>. My graduation
+						class is going to be the <strong>Class of 2023</strong>, as I'll most likely be graduating in December 2023.
 					</p>
 
 					<hr />
 
 					<header>
-						<h3>Heading with a Subtitle</h3>
-						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+						<h3>Hobbies</h3>
 					</header>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
-						faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius
-						montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 					<header>
-						<h4>Heading with a Subtitle</h4>
-						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+						<h4>Video Games</h4>
 					</header>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
-						faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius
-						montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+					<p>I love playing video games, mainly strategy games.</p>
+					<header>
+						<h4>Programming</h4>
+					</header>
+					<p>I love programming for fun.</p>
 
 					<hr />
 
@@ -449,12 +444,17 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.youtube.com/channel/UCzYROYODhbwiBhnEj2cxiZA" target="_blank" rel="noopener noreferrer"
+						class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="https://www.linkedin.com/in/robert-zhao-037247190/" target="_blank" rel="noopener noreferrer"
+						class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://www.instagram.com/rzhao0506/" class="icon brands alt fa-instagram"><span
+							class="label">Instagram</span></a></li>
+				<li><a href="https://github.com/robertzhao2002?tab=repositories" target="_blank" rel="noopener noreferrer"
+						class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="mailto:rzhao1234@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a>
+				</li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Untitled. All rights reserved.</li>
