--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html">Landed</a></h1>
+			<h1 id="logo"><a href="index.html">R. Zhao</a></h1>
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -43,8 +43,7 @@
 							</li>
 						</ul>
 					</li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#" class="button primary">Sign Up</a></li>
+					<li><a href="elements.html">About</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -53,9 +52,9 @@
 		<section id="banner">
 			<div class="content">
 				<header>
-					<h2>The future has landed</h2>
-					<p>And there are no hoverboards or flying cars.<br />
-						Just apps. Lots of mother flipping apps.</p>
+					<h2>Welcome to Robert Zhao's Personal Website</h2>
+					<p>Computer programming is great because it can be viewed as both an art and a science.<br />
+						So I decided to make a personal website as a "portfolio."</p>
 				</header>
 				<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 			</div>
@@ -199,6 +198,8 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
+				<li><a href="https://www.youtube.com/channel/UCzYROYODhbwiBhnEj2cxiZA" target="_blank" rel="noopener noreferrer"
+						class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="https://www.linkedin.com/in/robert-zhao-037247190/" target="_blank" rel="noopener noreferrer"
 						class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
