Add projects page

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
 <head>
 	<title>About Me</title>
-	<link rel="icon" type="image/x-icon" href="/images/fav.png">
+	<link rel="icon" type="image/x-icon" href="./images/fav.png">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,28 +22,14 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html">R. Zhao</a></h1>
+			<h1 id="logo"><a href="index.html"><img style="vertical-align:middle;margin-bottom: 10px" height=30px
+						width=30px src="images/fav.png" /> R. Zhao</a>
+			</h1>
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li>
-						<a href="#">Layouts</a>
-						<ul>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
-							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
-							<li>
-								<a href="#">Submenu</a>
-								<ul>
-									<li><a href="#">Option 1</a></li>
-									<li><a href="#">Option 2</a></li>
-									<li><a href="#">Option 3</a></li>
-									<li><a href="#">Option 4</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-					<li><a href="elements.html">About</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="about.html">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -52,17 +38,21 @@
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>About Robert Zhao</h2>
-					<p>Computer Science Major at Cornell University</p>
+					<h2>🚀 About Me</h2>
+					<p>Computer Science Major, Cornell University</p>
+					<p>2020-2023</p>
 				</header>
 
 				<!-- Text -->
 				<section>
 					<h3>Who am I?</h3>
-					<p>Hi! My name is <b>Robert Zhao</b>, and I currently study <strong>Computer Science</strong> with a side
+					<p>Hi! My name is <b>Robert Zhao</b>, and I currently study <strong>Computer Science</strong> with a
+						side
 						concentration in
-						Applied Engineering Physics at <strong>Cornell University's College of Engineering</strong>. My graduation
-						class is going to be the <strong>Class of 2023</strong>, as I'll most likely be graduating in December 2023.
+						Applied Engineering Physics at <strong>Cornell University's College of Engineering</strong>. My
+						graduation
+						class is going to be the <strong>Class of 2023</strong>, as I'll most likely be graduating in
+						December 2023.
 					</p>
 
 					<hr />
@@ -73,12 +63,22 @@
 					<header>
 						<h4>Video Games</h4>
 					</header>
-					<p>I love playing video games, mainly strategy games.</p>
+					<p>In my free time, I love to play video games. Some games that I play the most are <a
+							href="https://jstris.jezevec10.com/" target="_blank" rel="noopener noreferrer">Jstris</a>,
+						Clash Royale,
+						Bloons TD 6, Pokémon, and Minesweeper. </p>
 					<header>
 						<h4>Programming</h4>
 					</header>
-					<p>I love programming for fun.</p>
-
+					<p>In addition to studying computer science and software engineering, I enjoy doing it in my free
+						time as
+						well. As a recreational programmer, I constantly find myself using programming to make my life
+						easier.</p>
+					<header>
+						<h4>Rubik's Cubing</h4>
+					</header>
+					<p>I also like to solve Rubik's cubes of various types, which is commonly referred to as
+						"speedcubing."</p>
 					<hr />
 
 					<h2>Heading Level 2</h2>
@@ -90,9 +90,12 @@
 					<hr />
 
 					<h4>Blockquote</h4>
-					<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod.
-						Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac
-						adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam
+					<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus
+						euismod.
+						Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis
+						volutpat ac
+						adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit
+						amet nullam
 						adipiscing eu felis.</blockquote>
 
 					<h4>Preformatted</h4>
@@ -145,20 +148,30 @@
 
 							<h4>Icons</h4>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+								</li>
+								<li><a href="#" class="icon brands fa-facebook-f"><span
+											class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands fa-instagram"><span
+											class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a>
+								</li>
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 							</ul>
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands alt fa-tumblr"><span class="label">Tumblr</span></a></li>
+								<li><a href="#" class="icon brands alt fa-twitter"><span
+											class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands alt fa-facebook-f"><span
+											class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands alt fa-instagram"><span
+											class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">Github</span></a>
+								</li>
+								<li><a href="#" class="icon brands alt fa-dribbble"><span
+											class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon brands alt fa-tumblr"><span class="label">Tumblr</span></a>
+								</li>
 							</ul>
 
 						</div>
@@ -373,7 +386,8 @@
 								<label for="human">I am a human and not a robot</label>
 							</div>
 							<div class="col-12">
-								<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+								<textarea name="message" id="message" placeholder="Enter your message"
+									rows="6"></textarea>
 							</div>
 							<div class="col-12">
 								<ul class="actions">
@@ -391,51 +405,92 @@
 					<h4>Fit</h4>
 					<div class="box alt">
 						<div class="row gtr-50 gtr-uniform">
-							<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+							<div class="col-12"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
+							</div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic02.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic03.jpg"
+										alt="" /></span></div>
+							<div class="col-4 col-6-xsmall"><span class="image fit"><img src="images/pic04.jpg"
+										alt="" /></span></div>
 						</div>
 					</div>
 
 					<h4>Left &amp; Right</h4>
-					<p><span class="image left"><img src="images/pic08.jpg" alt="" /></span>Fringilla nisl. Donec accumsan
-						interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus
-						vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac
-						pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in
-						faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
-						Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus
-						euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat
-						ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus
-						euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat
-						ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Cras aliquet accumsan curae accumsan
-						arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin
-						interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam. Cras aliquet accumsan
-						curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida
-						sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam.</p>
-					<p><span class="image right"><img src="images/pic08.jpg" alt="" /></span>Fringilla nisl. Donec accumsan
-						interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus
-						vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac
-						pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in
-						faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
-						Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus
-						euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat
-						ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus
-						euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat
-						ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Cras aliquet accumsan curae accumsan
-						arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin
-						interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam. Cras aliquet accumsan
-						curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida
-						sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam.</p>
+					<p><span class="image left"><img src="images/pic08.jpg" alt="" /></span>Fringilla nisl. Donec
+						accumsan
+						interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis
+						in faucibus
+						vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
+						Integer ac
+						pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum
+						primis in
+						faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu
+						faucibus.
+						Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis
+						eget. tempus
+						euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis
+						iaculis volutpat
+						ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis
+						eget. tempus
+						euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis
+						iaculis volutpat
+						ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Cras aliquet accumsan
+						curae accumsan
+						arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida
+						sollicitudin
+						interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam. Cras
+						aliquet accumsan
+						curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in
+						gravida
+						sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet
+						nullam.</p>
+					<p><span class="image right"><img src="images/pic08.jpg" alt="" /></span>Fringilla nisl. Donec
+						accumsan
+						interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis
+						in faucibus
+						vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.
+						Integer ac
+						pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum
+						primis in
+						faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu
+						faucibus.
+						Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis
+						eget. tempus
+						euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis
+						iaculis volutpat
+						ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis
+						eget. tempus
+						euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis
+						iaculis volutpat
+						ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Cras aliquet accumsan
+						curae accumsan
+						arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida
+						sollicitudin
+						interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam. Cras
+						aliquet accumsan
+						curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in
+						gravida
+						sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet
+						nullam.</p>
 				</section>
 
 			</div>
@@ -444,24 +499,25 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="https://www.youtube.com/channel/UCzYROYODhbwiBhnEj2cxiZA" target="_blank" rel="noopener noreferrer"
-						class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
-				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="https://www.linkedin.com/in/robert-zhao-037247190/" target="_blank" rel="noopener noreferrer"
-						class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://www.instagram.com/rzhao0506/" class="icon brands alt fa-instagram"><span
-							class="label">Instagram</span></a></li>
-				<li><a href="https://github.com/robertzhao2002?tab=repositories" target="_blank" rel="noopener noreferrer"
-						class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-				<li><a href="mailto:rzhao1234@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a>
+				<li><a href="https://www.youtube.com/channel/UCzYROYODhbwiBhnEj2cxiZA" target="_blank"
+						rel="noopener noreferrer" class="icon brands alt fa-youtube"><span
+							class="label">YouTube</span></a></li>
+				<li><a href="https://www.linkedin.com/in/robert-zhao-037247190/" target="_blank"
+						rel="noopener noreferrer" class="icon brands alt fa-linkedin-in"><span
+							class="label">LinkedIn</span></a></li>
+				<li><a href="https://github.com/robertzhao2002?tab=repositories" target="_blank"
+						rel="noopener noreferrer" class="icon brands alt fa-github"><span
+							class="label">GitHub</span></a></li>
+				<li><a href="mailto:rzhao1234@gmail.com" class="icon solid alt fa-envelope"><span
+							class="label">Email</span></a>
 				</li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>&copy; Robert Zhao.</li>
+				<li>Website Code: <a href="https://github.com/robertzhao2002/robertzhao2002.github.io"
+						target="_blank">here</a></li>
 			</ul>
 		</footer>
-
 	</div>
 
 	<!-- Scripts -->
