--- a/projects.html
+++ b/projects.html
@@ -42,78 +42,65 @@
                     <p>Here are some of my past projects</p>
                 </header>
                 <div class="box alt">
-                    <div class="row gtr-50 gtr-uniform">
-                        <div class="col-4 col-6-xsmall">
-                            <div class="projectcard">
-                                <h3 class="projectname"><a
-                                        href="https://github.com/robertzhao2002/Turn-based-Fighting-Game"
-                                        target="_blank">⚔️ Turn-Based
-                                        Fighting Game</a></h3>
-                                <p>A turn-based fighting game engine built using OCaml. Customize your games using a
-                                    JSON file, and it will load your game as a CLI application.</p>
-                                <a href="#" class="button learnmore">Learn More</a></li>
-                            </div>
+                    <div class="projects">
+                        <div class="projectcard">
+                            <h3 class="projectname"><a href="https://github.com/robertzhao2002/Turn-based-Fighting-Game"
+                                    target="_blank">⚔️ Turn-Based
+                                    Fighting Game</a></h3>
+                            <p>A turn-based fighting game engine built using OCaml. Customize your games using a
+                                JSON file, and it will load your game as a CLI application.</p>
+                            <a href="#" class="button learnmore">Learn More</a></li>
                         </div>
-                        <div class="col-4 col-6-xsmall">
-                            <div class="projectcard">
-                                <h3 class="projectname"><a href="https://github.com/robertzhao2002/Sports-Connect"
-                                        target="_blank">🏆 Sports
-                                        Connect</a></h3>
-                                <p>A Python, web, and Kotlin application that randomly selects pairs of professional
-                                    sports teams. As a player, you need to think of players that have played for both
-                                    teams (indicated by coordinates in the grid). The web version can be found <a
-                                        href="https://sports-connect.vercel.app/" target="_blank">here</a>. </p>
-                                <a href="#" class="button learnmore">Learn More</a></li>
-                            </div>
+                        <div class="projectcard">
+                            <h3 class="projectname"><a href="https://github.com/robertzhao2002/Sports-Connect"
+                                    target="_blank">🏆 Sports
+                                    Connect</a></h3>
+                            <p>A Python, web, and Kotlin application that randomly selects pairs of professional
+                                sports teams. As a player, you need to think of players that have played for both
+                                teams (indicated by coordinates in the grid). The web version can be found <a
+                                    href="https://sports-connect.vercel.app/" target="_blank">here</a>. </p>
+                            <a href="#" class="button learnmore">Learn More</a></li>
                         </div>
-                        <div class="col-4 col-6-xsmall">
-                            <div class="projectcard">
-                                <h3 class="projectname"><a
-                                        href="https://github.com/robertzhao2002/database-management-system"
-                                        target="_blank">🖧 Database Management System</a></h3>
-                                <p>A DBMS built using Java for my CS 4321 database practicum course. I turned this
-                                    project into a Gradle project, so we could run Github Actions CI on it. </p>
-                                <a href="#" class="button learnmore">Learn More</a></li>
-                            </div>
+                        <div class="projectcard">
+                            <h3 class="projectname"><a
+                                    href="https://github.com/robertzhao2002/database-management-system"
+                                    target="_blank">🖧 Database Management System</a></h3>
+                            <p>A DBMS built using Java for my CS 4321 database practicum course. I turned this
+                                project into a Gradle project, so we could run Github Actions CI on it. </p>
+                            <a href="#" class="button learnmore">Learn More</a></li>
                         </div>
-                        <div class="col-4 col-6-xsmall">
-                            <div class="projectcard">
-                                <h3 class="projectname"><a href="https://github.com/robertzhao2002/OCR-App"
-                                        target="_blank">👁️ OCR App</a>
-                                </h3>
-                                <p>An Android application built using Kotlin for the Fall 2020 Cornell AppDev Intro
-                                    Course Hackathon. The OCR functionality was implemented by
-                                    using the Google Cloud Vision API. My free trial ended, so sadly it is no longer
-                                    functional. </p>
-                                <a href="#" class="button learnmore">Learn More</a></li>
-                            </div>
+                        <div class="projectcard">
+                            <h3 class="projectname"><a href="https://github.com/robertzhao2002/OCR-App"
+                                    target="_blank">👁️ OCR App</a>
+                            </h3>
+                            <p>An Android application built using Kotlin for the Fall 2020 Cornell AppDev Intro
+                                Course Hackathon. The OCR functionality was implemented by
+                                using the Google Cloud Vision API. My free trial ended, so sadly it is no longer
+                                functional. </p>
+                            <a href="#" class="button learnmore">Learn More</a></li>
                         </div>
-                        <div class="col-4 col-6-xsmall">
-                            <div class="projectcard">
-                                <h3 class="projectname"><a href="https://github.com/robertzhao2002/OCaml-Chess-Engine"
-                                        target="_blank">♟️ OCaml Chess Engine</a></h3>
-                                <p>A CLI chess application built using OCaml. This was my final project for my CS 3110
-                                    functional programming class. We implemented a chess clock using the <a
-                                        href="https://ocaml.org/p/conduit-lwt-unix/6.0.0" target="_blank">LWT</a>
-                                    library.</p>
-                                <a href="#" class="button learnmore">Learn More</a></li>
-                            </div>
+                        <div class="projectcard">
+                            <h3 class="projectname"><a href="https://github.com/robertzhao2002/OCaml-Chess-Engine"
+                                    target="_blank">♟️ OCaml Chess Engine</a></h3>
+                            <p>A CLI chess application built using OCaml. This was my final project for my CS 3110
+                                functional programming class. We implemented a chess clock using the <a
+                                    href="https://ocaml.org/p/conduit-lwt-unix/6.0.0" target="_blank">LWT</a>
+                                library.</p>
+                            <a href="#" class="button learnmore">Learn More</a></li>
                         </div>
-                        <div class="col-4 col-6-xsmall">
-                            <div class="projectcard">
-                                <h3 class="projectname"><img style="vertical-align:middle;" height=" 30px" width="30px"
-                                        src="./images/pikachu.png" />
-                                    <a href="https://github.com/robertzhao2002/pokemoncatcher" target="_blank">Pokémon
-                                        Projects</a>
-                                </h3>
-                                <p>A Python script that simulates Pokémon encounters. I also added a basic algorithm to
-                                    find the best
-                                    natures for any Pokémon based on their base stats. <a
-                                        href="https://github.com/robertzhao2002/pokemonkatakanaquiz"
-                                        target="_blank">Here</a> is another Pokémon related project I made that quizzes
-                                    you on their Japanese names.</p>
-                                <a href="#" class="button learnmore">Learn More</a></li>
-                            </div>
+                        <div class="projectcard">
+                            <h3 class="projectname"><img style="vertical-align:middle;" height=" 30px" width="30px"
+                                    src="./images/pikachu.png" />
+                                <a href="https://github.com/robertzhao2002/pokemoncatcher" target="_blank">Pokémon
+                                    Projects</a>
+                            </h3>
+                            <p>A Python script that simulates Pokémon encounters. I also added a basic algorithm to
+                                find the best
+                                natures for any Pokémon based on their base stats. <a
+                                    href="https://github.com/robertzhao2002/pokemonkatakanaquiz"
+                                    target="_blank">Here</a> is another Pokémon related project I made that quizzes
+                                you on their Japanese names.</p>
+                            <a href="#" class="button learnmore">Learn More</a></li>
                         </div>
                     </div>
                 </div>
