Add loading animation and project sub pages

--- a/projects.html
+++ b/projects.html
@@ -41,15 +41,18 @@
                     <h2>🛠️ Projects</h2>
                     <p>Here are some of my past projects</p>
                 </header>
-                <div class="projects">
+                <div class="projects reveal">
                     <div class="projectcard">
+                        <a href="fightinggame.html"></a>
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/Turn-based-Fighting-Game"
                                 target="_blank">⚔️ Turn-Based
                                 Fighting Game</a></h3>
                         <p>A turn-based fighting game engine built using OCaml. Customize your games using a
                             JSON file, and it will load your game as a CLI application.</p>
                     </div>
+
                     <div class="projectcard">
+                        <a href="sportsconnect.html"></a>
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/Sports-Connect"
                                 target="_blank">🏆 Sports
                                 Connect</a></h3>
@@ -59,12 +62,14 @@
                                 href="https://sports-connect.vercel.app/" target="_blank">here</a>. </p>
                     </div>
                     <div class="projectcard">
+                        <a href="dbms.html"></a>
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/database-management-system"
                                 target="_blank">🖧 Database Management System</a></h3>
                         <p>A DBMS built using Java for my CS 4321 database practicum course. I turned this
                             project into a Gradle project, so we could run Github Actions CI on it. </p>
                     </div>
                     <div class="projectcard">
+                        <a href="ocr.html"></a>
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/OCR-App" target="_blank">👁️
                                 OCR App</a>
                         </h3>
@@ -74,6 +79,7 @@
                             functional 😥. </p>
                     </div>
                     <div class="projectcard">
+                        <a href="chess.html"></a>
                         <h3 class="projectname"><a href="https://github.com/robertzhao2002/OCaml-Chess-Engine"
                                 target="_blank">♟️ OCaml Chess Engine</a></h3>
                         <p>A CLI chess application built using OCaml. This was my final project for my CS 3110
@@ -82,6 +88,7 @@
                             library.</p>
                     </div>
                     <div class="projectcard">
+                        <a href="pokemon.html"></a>
                         <h3 class="projectname"><img style="vertical-align:middle;" height=" 30px" width="30px"
                                 src="./images/pikachu.png" />
                             <a href="https://github.com/robertzhao2002/pokemoncatcher" target="_blank">Pokémon
