--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="about.html">About Me</a></li>
+					<li><a href="funstuff.html">Fun Stuff</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -39,8 +40,6 @@
 			<div class="container">
 				<header class="major">
 					<h2>🚀 About Me</h2>
-					<p>Computer Science Major, Cornell University</p>
-					<p>2020-2023</p>
 				</header>
 
 				<!-- Text -->
@@ -80,7 +79,25 @@
 					<p>I also like to solve Rubik's cubes of various types, which is commonly referred to as
 						"speedcubing."</p>
 					<hr />
-
+					<header>
+						<h3>💼 Career</h3>
+					</header>
+					<header>
+						<h4>Tinder (June 2021 to August 2021)</h4>
+					</header>
+					<p>In my first summer internship at Tinder, I rebuilt the Open Source Software Screen using Jetpack
+						Compose. This was part of a larger <a
+							href="https://medium.com/tinder/sparking-jetpack-compose-at-tinder-8f15d77eb4da"
+							target="_blank">initiative</a>
+						to migrate the Tinder Android app from legacy Android views to Jetpack Compose.</p>
+					<header>
+						<h4>Tinder (May 2022 to September 2022)</h4>
+					</header>
+					<p>In my second summer internship at Tinder, I worked on 2 main projects.</p>
+					<header>
+						<h4>Nine Hill Technologies (June 2023 to present)</h4>
+					</header>
+					<hr />
 					<h2>Heading Level 2</h2>
 					<h3>Heading Level 3</h3>
 					<h4>Heading Level 4</h4>
@@ -529,7 +546,6 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
