--- a/funstuff.html
+++ b/funstuff.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>DBMS</title>
+    <title>Fun Stuff</title>
     <link rel="icon" type="image/x-icon" href="./images/fav.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -39,7 +39,7 @@
         <div id="main" class="wrapper style1">
             <div class="container">
                 <header class="major">
-                    <h2>🖧 Database Management System</h2>
+                    <h2>🎉 Fun Stuff</h2>
                 </header>
             </div>
         </div>
