--- a/ocr.html
+++ b/ocr.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Projects</title>
+    <title>OCR</title>
     <link rel="icon" type="image/x-icon" href="./images/fav.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -30,6 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="about.html">About Me</a></li>
+                    <li><a href="funstuff.html">Fun Stuff</a></li>
                 </ul>
             </nav>
         </header>
