--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="about.html">About Me</a></li>
+                    <li><a href="funstuff.html">Fun Stuff</a></li>
                 </ul>
             </nav>
         </header>
@@ -39,7 +40,6 @@
             <div class="container">
                 <header class="major">
                     <h2>🛠️ Projects</h2>
-                    <p>Here are some of my past projects</p>
                 </header>
                 <div class="projects reveal">
                     <div class="projectcard">
